# traceviz

./: .gitignore  AGENTS.md  MODULE.bazel  README.md  bazel_demo.sh  go.work.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  validate.sh
causal_tracing/: AGENTS.md  BUILD.bazel  PLAN.md  README.md  go.mod  go.sum
causal_tracing/concurrency/: BUILD.bazel  profile.go  profile_test.go
causal_tracing/data_source/: BUILD.bazel  critical_path_query_test.go  data_source.go  data_source_test.go  span_causality_query_test.go  trace_minimap_query_test.go  trace_query_test.go  trace_status_query_test.go  validation_query_test.go
causal_tracing/extendedotel/: BUILD.bazel  causality.go  concurrency.go  convert.go  convert_test.go  namer.go  raw.go  render.go  transform.go  types.go
causal_tracing/react-client/: BUILD.bazel  bazel_npm.sh  index.html  package.json  vite.config.ts
causal_tracing/react-client/src/: App.tsx  index.css  main.tsx
causal_tracing/rendertrace/: BUILD.bazel  critical_path.go  model.go  model_test.go
causal_tracing/server/: BUILD.bazel  server.go
causal_tracing/service/: BUILD.bazel  service.go
causal_tracing/testdata/: BUILD.bazel  causaltraces-schema.json  tracey-trace1-ct-logs.json
client/angular/: BUILD.bazel  bazel_npm.sh  package.json  tsconfig.json
client/core/: bazel_npm.sh  package.json
client/core/spec/support/: jasmine.js
client/core/src/: core.ts
client/core/src/app_core/: app_core.ts
client/core/src/data_query/: http_data_fetcher.ts
client/core/src/data_series_query/: data_series_query.ts
client/core/src/errors/: errors.ts
client/core/src/keypress/: keypress.ts  keypress_test.ts
client/core/src/trace/: renderers.ts
client/core/src/url_hash/: url_hash.ts  url_hash_test.ts
client/core/src/value/: value.ts  value_string_encoding_test.ts
client/react/: AGENTS.md  BUILD.bazel  bazel_npm.sh  index.ts  package.json  tsconfig.json
client/react/components/: index.ts
client/react/components/axes/: category_hierarchy_y.tsx  category_hierarchy_y_dom_test.tsx  continuous_axis_x.tsx  continuous_axis_x_dom_test.tsx  continuous_axis_x_test.ts
client/react/components/data_table/: data_table.tsx  data_table_dom_test.tsx
client/react/components/error_toast/: error_toast.tsx
client/react/components/global_state_monitor/: global_state_monitor.tsx
client/react/components/keypress/: keypress.tsx
client/react/components/line_chart/: line_chart.tsx
client/react/components/trace/: category_callout.ts  horizontal_trace.tsx  horizontal_trace_dom_test.tsx  trace_minimap.tsx  trace_minimap_dom_test.tsx
client/react/core/: app_core_context.ts  index.ts
client/react/core/value/: global.ts  use_value.ts  value_test.ts
client/react/spec/support/: jasmine.js  jasmine.json  setup.cjs  trace_minimap_jasmine.js
client/react/testcases/: trace.ts
docs/: get_started.md  why_traceviz.md
logviz/: BUILD.bazel  bazel_all.sh  bazel_go.sh  go.mod  go.sum  run.sh  run_server.sh
logviz/analysis/log_reader/: BUILD.bazel  logger_reader.go  logger_reader_test.go  simple_log_parser.go
logviz/analysis/log_trace/: BUILD.bazel
logviz/angular-client/: BUILD.bazel  angular.json  bazel_npm.sh  extra-webpack.config.js  package.json  proxy.conf.json  tsconfig.json
logviz/angular-client/src/: index.html
logviz/angular-client/src/app/: app.component.css  app.component.html  app.component.ts  app.module.ts
logviz/bazel_go_mod/: BUILD.bazel  go.mod  go.sum
logviz/client/: angular.json  bazel_npm.sh  package.json
logviz/data_source/: BUILD.bazel  data_source.go  data_source_test.go  timeseries_query.go  trace_query.go
logviz/react-client/: BUILD.bazel  bazel_npm.sh  index.html  package.json  vite.config.ts
logviz/react-client/src/: App.tsx  index.css  main.tsx
logviz/server/: BUILD.bazel  server.go
logviz/service/: BUILD.bazel  service.go
server/go/: BUILD.bazel  MODULE.bazel  go.mod  go.sum  tools.go
server/go/bar_chart/: BUILD.bazel  bar_chart.go  bar_chart_test.go
server/go/category/: BUILD.bazel  category.go  category_test.go
server/go/category_axis/: BUILD.bazel  category_axis.go
server/go/color/: BUILD.bazel  color.go  color_test.go
server/go/continuous_axis/: BUILD.bazel  continuous_axis.go  continuous_axis_test.go
server/go/dot/: BUILD.bazel  dot.go  dot_test.go
server/go/handlers/: BUILD.bazel  query_handler.go
server/go/label/: BUILD.bazel  label.go
server/go/magnitude/: BUILD.bazel  magnitude.go
server/go/payload/: BUILD.bazel  payload.go  payload_test.go
server/go/query_dispatcher/: BUILD.bazel  query_dispatcher.go  query_dispatcher_test.go
server/go/style/: BUILD.bazel  style.go
server/go/table/: BUILD.bazel  table.go  table_test.go
server/go/test_util/: BUILD.bazel  test_util.go  test_util_test.go
server/go/tools/traceviz_data_prettyprint/: BUILD.bazel  main.go  main_test.go
server/go/trace/: BUILD.bazel  trace.go  trace_test.go
server/go/trace_edge/: BUILD.bazel  trace_edge.go  trace_edge_test.go
server/go/util/: BUILD.bazel  util.go  util_test.go
server/go/weighted_tree/: BUILD.bazel  weighted_tree.go  weighted_tree_test.go
server/go/xy_chart/: BUILD.bazel  xy_chart.go  xy_chart_test.go
