load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

sh_binary(
    name = "build_go",
    srcs = ["bazel_go.sh"],
    args = ["build"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "test_go",
    srcs = ["bazel_go.sh"],
    args = ["test"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "build",
    srcs = ["bazel_all.sh"],
    args = ["build"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "test",
    srcs = ["bazel_all.sh"],
    args = ["test"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "run_server",
    srcs = ["run_server.sh"],
    args = [
        "--server-bin",
        "$(rootpath //logviz/server:server)",
    ],
    data = ["//logviz/server"],
    visibility = ["//visibility:public"],
)
