exports_files([
    "causaltraces-schema.json",
    "compose-post-ct-logs.json",
    "tracey-trace1-ct-logs.json",
])

filegroup(
    name = "compose_post_ct_logs",
    srcs = ["compose-post-ct-logs.json"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "tracey_trace1_ct_logs",
    srcs = ["tracey-trace1-ct-logs.json"],
    visibility = ["//visibility:public"],
)
