load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

sh_binary(
    name = "build",
    srcs = ["bazel_npm.sh"],
    args = ["build"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "test",
    srcs = ["bazel_npm.sh"],
    args = ["test"],
    visibility = ["//visibility:public"],
)
