load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "log_trace",
    srcs = [
        "filter.go",
        "log_reader.go",
        "log_trace.go",
    ],
    importpath = "github.com/ilhamster/traceviz/logviz/analysis/log_trace",
    visibility = ["//visibility:public"],
)

go_test(
    name = "log_trace_test",
    srcs = ["log_trace_test.go"],
    embed = [":log_trace"],
    deps = ["@com_github_google_go_cmp//cmp:go_default_library"],
)
