load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "bar_chart",
    srcs = ["bar_chart.go"],
    importpath = "github.com/ilhamster/traceviz/server/go/bar_chart",
    visibility = ["//visibility:public"],
    deps = [
        "//server/go/category",
        "//server/go/category_axis",
        "//server/go/continuous_axis",
        "//server/go/util",
    ],
)

go_test(
    name = "bar_chart_test",
    srcs = ["bar_chart_test.go"],
    embed = [":bar_chart"],
    deps = [
        "//server/go/category",
        "//server/go/category_axis",
        "//server/go/color",
        "//server/go/continuous_axis",
        "//server/go/label",
        "//server/go/test_util",
        "//server/go/util",
    ],
)
