load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "color",
    srcs = ["color.go"],
    importpath = "github.com/ilhamster/traceviz/server/go/color",
    visibility = ["//visibility:public"],
    deps = ["//util"],
)

go_test(
    name = "color_test",
    srcs = ["color_test.go"],
    embed = [":color"],
    deps = [
        "//test_util",
        "//util",
    ],
)
