load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "dot",
    srcs = ["dot.go"],
    importpath = "github.com/ilhamster/traceviz/server/go/dot",
    visibility = ["//visibility:public"],
    deps = ["//server/go/util"],
)

go_test(
    name = "dot_test",
    srcs = ["dot_test.go"],
    embed = [":dot"],
    deps = [
        "//server/go/test_util",
        "//server/go/util",
    ],
)
