load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "trace",
    srcs = ["trace.go"],
    importpath = "github.com/ilhamster/traceviz/server/go/trace",
    visibility = ["//visibility:public"],
    deps = [
        "//category",
        "//category_axis",
        "//continuous_axis",
        "//util",
    ],
)

go_test(
    name = "trace_test",
    srcs = ["trace_test.go"],
    embed = [":trace"],
    deps = [
        "//category",
        "//category_axis",
        "//continuous_axis",
        "//payload",
        "//test_util",
        "//util",
    ],
)
