load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "trace",
    srcs = ["trace.go"],
    importpath = "github.com/ilhamster/traceviz/server/go/trace",
    visibility = ["//visibility:public"],
    deps = [
        "//server/go/category",
        "//server/go/category_axis",
        "//server/go/continuous_axis",
        "//server/go/util",
    ],
)

go_test(
    name = "trace_test",
    srcs = ["trace_test.go"],
    embed = [":trace"],
    deps = [
        "//server/go/category",
        "//server/go/category_axis",
        "//server/go/continuous_axis",
        "//server/go/payload",
        "//server/go/test_util",
        "//server/go/util",
    ],
)
