load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "trace_edge",
    srcs = ["trace_edge.go"],
    importpath = "github.com/ilhamster/traceviz/server/go/trace_edge",
    visibility = ["//visibility:public"],
    deps = [
        "//server/go/continuous_axis",
        "//server/go/payload",
        "//server/go/util",
    ],
)

go_test(
    name = "trace_edge_test",
    srcs = ["trace_edge_test.go"],
    embed = [":trace_edge"],
    deps = [
        "//server/go/category",
        "//server/go/continuous_axis",
        "//server/go/payload",
        "//server/go/test_util",
        "//server/go/util",
    ],
)
