load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "weighted_tree",
    srcs = [
        "walk.go",
        "weighted_tree.go",
    ],
    importpath = "github.com/ilhamster/traceviz/server/go/weighted_tree",
    visibility = ["//visibility:public"],
    deps = [
        "//server/go/magnitude",
        "//server/go/util",
    ],
)

go_test(
    name = "weighted_tree_test",
    srcs = [
        "walk_test.go",
        "weighted_tree_test.go",
    ],
    embed = [":weighted_tree"],
    deps = [
        "//server/go/magnitude",
        "//server/go/payload",
        "//server/go/test_util",
        "//server/go/util",
        "@com_github_google_go_cmp//cmp",
    ],
)
